--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo totam optio consequatur quisquam sunt rerum eum, reiciendis minus voluptatum in fugiat nemo doloremque expedita ut et cum eveniet neque ipsam.
+    <header class="header">
+        <div class="container"></div>
+        <a href="" class="header_logo"><img src="/img/logo.svg" alt=""></a>
+        <nav class="header_menu">
+            <ul class="menu_list">
+                <li class="menu_item"><a href="" class="menu_link">Новости</a></li>
+                <li class="menu_item"><a href="" class="menu_link">Справочник модулей</a></li>
+                <li class="menu_item"><a href="" class="menu_link">Контакты</a></li>
+                <li class="menu_item"><a href="" class="menu_link">О компании</a></li>
+                <li class="menu_item"><a href="" class="menu_link">Войти</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
