--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,17 +9,18 @@
 </head>
 <body>
     <header class="header">
-        <div class="container"></div>
-        <a href="" class="header_logo"><img src="/img/logo.svg" alt=""></a>
-        <nav class="header_menu">
-            <ul class="menu_list">
-                <li class="menu_item"><a href="" class="menu_link">Новости</a></li>
-                <li class="menu_item"><a href="" class="menu_link">Справочник модулей</a></li>
-                <li class="menu_item"><a href="" class="menu_link">Контакты</a></li>
-                <li class="menu_item"><a href="" class="menu_link">О компании</a></li>
-                <li class="menu_item"><a href="" class="menu_link">Войти</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="" class="header__logo"><img src="/img/logo.svg" alt=""></a>
+            <nav class="header__menu">
+                <ul class="menu__list">
+                    <li class="menu__item"><a href="" class="menu__link">Решения для управлений</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Проекты</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Модули</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">О компании</a></li>
+                    <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
